# acdesignhub

./: .gitignore  Procfile  README.md  manage.py  package.json  pyproject.toml  requirements.in  requirements.txt
acdesignhub/: asgi.py  settings.py  urls.py  wsgi.py
acdesignhub/hub/: admin.py  forms.py  models.py  tables.py  views.py
acdesignhub/hub/migrations/: 0001_create_submissions.py  0002_add_approvals_to_submissions.py  0003_rename_designer_metadata.py  0004_add_design_type_and_normalize_names.py  0005_rename_submission_to_design.py  0006_fix_design_type_label.py  0007_rename_designer_to_creator.py  0008_increase_max_length_design_and_creator_codes.py  0009_auto_20200512_0007.py  0010_auto_20200512_1355.py  0011_auto_20200515_1440.py  0012_auto_20200517_1257.py  0013_auto_20200517_1821.py  0014_migrate_codes.py  0015_auto_20200527_1749.py
acdesignhub/hub/templates/hub/: .new.html.swp  design.html  index.html  new.html
acdesignhub/hub/templatetags/: hub_extras.py
acdesignhub/static/: style.css
acdesignhub/templates/: __base.html
cypress/: .gitignore
cypress/fixtures/test_db/: db.sqlite3
cypress/integration/: smoketest.js
static/: style.css
