[tool.poetry]
name = "acdesignhub"
version = "0.1.0"
description = ""
authors = ["Savanah Steigen <steigen@theinstitutes.org>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
django-crispy-forms = "^1.9.1"
Pillow = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
