[tool.poetry]
name = "acdesignhub"
version = "0.1.0"
description = ""
authors = ["Savanah Steigen <steigen@theinstitutes.org>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
django-crispy-forms = "^1.9.1"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
